Updated info about me

--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
 	<meta charset="utf-8">
 	<title>Daniel Voogsgerd</title>
 	<link rel="stylesheet" href="css/style.css" />
+	<script type="application/ld+json">
+		{
+			"@context": "http://schema.org/",
+			"@type": "Person",
+			"name": "Daniel Voogsgerd",
+			"gender": "Male",
+			"nationality": {
+				"@type": "Country",
+				"name": "The Netherlands"
+			},
+			"JobTitle": "Student, Systems administrator, web-developer",
+			"affiliation": "University of Twente",
+			"url": "http://danielvoogsgerd.nl",
+			"email": "contact@danielvoogsgerd.nl",
+		}
+	</script>
 </head>
 <body>
 	<div class="container">
@@ -21,9 +37,9 @@
 			</figure>
 			<section class="social">
 				<a target="_blank" href="https://github.com/DanielVoogsgerd/" class="icon github"></a>
-				<a target="_blank" href="https://linkedin.com/in/daniël-voogsgerd-33486628" class="icon linkedin"></a>
 				<a target="_blank" href="https://google.com/+DanielVoogsgerd" class="icon googleplus"></a>
-				<a target="_blank" href="mailto:info@danielvoogsgerd.nl" class="icon email"></a>
+				<a target="_blank" href="https://linkedin.com/in/daniël-voogsgerd-33486628" class="icon linkedin"></a>
+				<a target="_blank" href="mailto:contact@danielvoogsgerd.nl" class="icon email"></a>
 			</section>
 			<aside class="knowledgecard">
 				<h2>About me</h2>
