--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<section id="intro">
 				<p>I'm a Applied Physics bachelor student at the University of Twente. Besides my study, I'm also a freelance sysadmin and (web)developer. I mostly build and host website and webapps.</p>
 				<p>I'm an active member at study association <a href="https://www.arago.utwente.nl">S.V. Arago</a> where I'm chair of the systems administration committee. I mostly help others in discovering the world of UNIX and more general systems administration. I'm an avid believer in FOSS and I've been using Linux as my daily driver as long as I can remember.</p>
-				<p>If you're curious about my motivations interests or just want to spam me, feel free to do so by clicking one of the social media icons on the right.</p>
+				<p>If you're curious about my motivations, interests, or just want to spam me, feel free to do so by clicking one of the social media icons on the right.</p>
 			</section>
 		</main>
 		<div class="sidebar">
