Small content update

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
 	<div class="container">
 		<main>
-			<h1>Daniel Voogsgerd</h1>
+			<h1><dfn title="Just pronounce it like Daniel, the e-diaeresis is just the Dutch way of writing it.">Daniël Voogsgerd</dfn></h1>
 			<section id="intro">
-				<p>I'm a Applied Physics bachelor student at the University of Twente. Besides my study, I'm also a freelance sysadmin and (web)developer. I mostly build and host website and webapps.</p>
-				<p>I'm an active member at study association <a href="https://www.arago.utwente.nl">S.V. Arago</a> where I'm chair of the systems administration committee. I mostly help others in discovering the world of UNIX and more general systems administration. I'm an avid believer in FOSS and I've been using Linux as my daily driver as long as I can remember.</p>
+				<p>I'm a Applied Physics bachelor student at the <a target="_blank" href="https://utwente.nl">University of Twente</a>. Besides my study, I'm also a freelance sysadmin and (web)developer. I mostly build and host website and webapps.</p>
+				<p>I'm an active member at study association <a target="_blank" href="https://www.arago.utwente.nl">S.V. Arago</a> where I'm chair of the systems administration committee. I mostly help others in discovering the world of UNIX and more general systems administration. I'm an avid believer in FOSS and I've been using Linux as my daily driver as long as I can remember.</p>
 				<p>If you're curious about my motivations, interests, or just want to spam me, feel free to do so by clicking one of the social media icons on the right.</p>
 			</section>
 		</main>
@@ -53,6 +53,8 @@
 						<td>English, Dutch</td>
 					</tr>
 				</table>
+
+				<p>Do you want a more serious description of me? <a target="_blank" href="http://files.danielvoogsgerd.nl/cv.pdf">Here</a> is my resume :)</p>
 			</aside>
 		</div>
 	</div>
