--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<meta charset="utf-8">
 	<title>Daniel Voogsgerd</title>
 	<link rel="stylesheet" href="css/style.css" />
+	<link rel="canonical" href="http://danielvoogsgerd.nl" />
 </head>
 <body>
 	<div class="container">
