--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
 						<td>HTML, CSS, JS, …</td>
 					</tr>
 					<tr>
-						<td>No seriously</td>
+						<td style="width: 80px;">No seriously</td>
 						<td>English, Dutch</td>
+					</tr>
+					<tr>
+						<td>Interests</td>
+						<td>Photography, Surfing, Electrical Engineering, High availability Server Architecture, Computer Science, Web Development, Physics, Astronomy</td>
 					</tr>
 				</table>
 
