--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 				<div class="scalinghack"></div>
 			</figure>
 			<section class="social">
-				<a target="_blank" href="https://github.com/DanielVoogsgerd/" class="icon github"></a>
-				<a target="_blank" href="https://google.com/+DanielVoogsgerd" class="icon googleplus"></a>
-				<a target="_blank" href="https://linkedin.com/in/daniël-voogsgerd-33486628" class="icon linkedin"></a>
-				<a target="_blank" href="mailto:contact@danielvoogsgerd.nl" class="icon email"></a>
+				<a target="_blank" href="https://github.com/DanielVoogsgerd/" title="GitHub" class="icon github"></a>
+				<a target="_blank" href="https://google.com/+DanielVoogsgerd" title="Google+" class="icon googleplus"></a>
+				<a target="_blank" href="https://linkedin.com/in/daniël-voogsgerd-33486628" title="LinkedIn" class="icon linkedin"></a>
+				<a target="_blank" href="mailto:contact@danielvoogsgerd.nl" title="Email" class="icon email"></a>
 			</section>
 			<aside class="knowledgecard">
 				<h2>About me</h2>
