Flip profile picture on click Dirty but awesome css hack

--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
 			</section>
 		</main>
 		<div class="sidebar">
+			<label for="flipimg">
 			<figure>
+				<input type="checkbox" id="flipimg">
 				<img src="photo.jpg" alt="Profile picture">
 				<div class="scalinghack"></div>
 			</figure>
+			</label>
 			<section class="social">
 				<a target="_blank" href="https://github.com/DanielVoogsgerd/" title="GitHub" class="icon github"></a>
 				<a target="_blank" href="https://google.com/+DanielVoogsgerd" title="Google+" class="icon googleplus"></a>
