Added Python as an interest

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					</tr>
 					<tr>
 						<td>Languages</td>
-						<td>HTML, CSS, JS, …</td>
+						<td>HTML, CSS, JS, Python, …</td>
 					</tr>
 					<tr>
 						<td style="width: 80px;">No seriously</td>
