JSON-LD Syntax fix

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			"JobTitle": "Student, Systems administrator, web-developer",
 			"affiliation": "University of Twente",
 			"url": "http://danielvoogsgerd.nl",
-			"email": "contact@danielvoogsgerd.nl",
+			"email": "contact@danielvoogsgerd.nl"
 		}
 	</script>
 	<script>
