--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Daniel Voogsgerd</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="theme-color" content="#424242">
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="canonical" href="http://danielvoogsgerd.nl" />
 </head>
