--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#424242">
 	<link rel="stylesheet" href="css/style.css" />
-	<link rel="canonical" href="http://danielvoogsgerd.nl" />
+	<link rel="canonical" href="https://danielvoogsgerd.nl" />
 </head>
 <body>
 	<div class="container">
