Moved cv to https

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					</tr>
 				</table>
 
-				<p>Do you want a more serious description of me? <a target="_blank" href="http://files.danielvoogsgerd.nl/cv.pdf">Here</a> is my resume :)</p>
+				<p>Do you want a more serious description of me? <a target="_blank" href="https://files.danielvoogsgerd.nl/cv.pdf">Here</a> is my resume :)</p>
 			</aside>
 		</div>
 	</div>
