Add personal icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="theme-color" content="#424242">
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="canonical" href="https://danielvoogsgerd.nl" />
+	<link rel="icon" sizes="192x192" href="icons/icon_192.png">
+	
 </head>
 <body>
 	<div class="container">
