--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="canonical" href="https://danielvoogsgerd.nl" />
 	<link rel="icon" sizes="192x192" href="icons/icon_192.png">
-	
+	<link rel="manifest" href="/webmanifest.json">
 </head>
 <body>
 	<div class="container">
